# ik_solver_lib

./: CMakeLists.txt  README.md  package.xml  plugins.xml
include/ik_solver_lib/base/: ik_solver_base.h
include/ik_solver_lib/trac_ik/: trac_ik_solver.h
src/trac_ik/: trac_ik_solver.cpp
