<?xml version="1.0"?>
<package format="2">
  <name>ik_solver_lib</name>
  <version>0.0.1</version>
  <description>IK Solver Plugin Library</description>
  <maintainer email="lethiic@gmail.com">lethic</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>pluginlib</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>trac_ik_lib</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <export>
      <ik_solver_lib plugin="${prefix}/plugins.xml" />
  </export>
</package>

